# drop

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  client.rs  crypto.rs  discovery.rs  main.rs  server.rs  tls.rs  utils.rs
tests/: test.rs
