[package]
name = "drop"
version = "1.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
aead = { version = "0.5", features = ["stream"] }
aes-gcm = "0.10"
axum = {version="0.8.8", features=["multipart"]}
base64 = "0.22"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
dialoguer = "0.12.0"
http-body-util = "0.1.3"
indicatif = { version = "0.18.4", features = ["tokio"]}
local-ip-address = "0.6.10"
mdns-sd = "0.18.2"
qr2term = "0.3.3"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["stream", "multipart"] }
tokio = {version = "1.50.0", features = ["full"]}
tokio-util = {version = "0.7.18", features = ["io"] }
tokio-stream = "0.1"
whoami = "2.1.1"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = 'abort'
